Fix pregnant tracking and add scroll to up family planning

--- a/AUF.EMR.MVC/Views/FamilyPlanning/Create.cshtml
+++ b/AUF.EMR.MVC/Views/FamilyPlanning/Create.cshtml
@@ -87,6 +87,11 @@
                         <span asp-validation-for="FPRecord.SpouseBirthday" class="block mb-2 text-sm text-red-700"></span>
                     </div>
                     <div class="mb-4">
+                        <label asp-for="FPRecord.SpouseAge" class="block mb-2 text-sm font-medium text-gray-700">Spouse's Age</label>
+                        <input asp-for="FPRecord.SpouseAge" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full md:w-4/5 p-2.5" />
+                        <span asp-validation-for="FPRecord.SpouseAge" class="block mb-2 text-sm text-red-700"></span>
+                    </div>
+                    <div class="mb-4">
                         <label asp-for="FPRecord.SpouseOccupation" class="block mb-2 text-sm font-medium text-gray-700">Spouse's Occupation</label>
                         <input asp-for="FPRecord.SpouseOccupation" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full md:w-4/5 p-2.5" />
                         <span asp-validation-for="FPRecord.SpouseOccupation" class="block mb-2 text-sm text-red-700"></span>
