--- a/AUF.EMR.MVC/Views/PregnancyTracking/Details.cshtml
+++ b/AUF.EMR.MVC/Views/PregnancyTracking/Details.cshtml
@@ -9,150 +9,134 @@
 <div class="container mx-auto px-4 py-8">
 
     <div class="bg-white shadow-md rounded-lg p-8 mb-6">
-        <div class="flex justify-between items-center mb-3">
-            <h1 class="text-2xl font-bold mb-3">Details</h1>
+        <div class="flex justify-between">
+            <div>
+                <h1 class="text-xl">Details</h1>
+                <h1 class="text-2xl font-bold text-gray-800 mb-4">Pregnancy Tracking</h1>
+            </div>
+            <div>
+                <a asp-action="Edit" asp-route-id="@Model.PregnancyTracking.Id" asp-route-householdNo="@Model.HouseholdNo" class="px-5 py-2.5 text-sm font-medium text-center inline-flex items-center text-white bg-primary-50 rounded-lg focus:ring-4 focus:outline-none focus:ring-green-200">
+                    <svg class="w-6 h-6 text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
+                        <path fill-rule="evenodd" d="M11.32 6.176H5c-1.105 0-2 .949-2 2.118v10.588C3 20.052 3.895 21 5 21h11c1.105 0 2-.948 2-2.118v-7.75l-3.914 4.144A2.46 2.46 0 0 1 12.81 16l-2.681.568c-1.75.37-3.292-1.263-2.942-3.115l.536-2.839c.097-.512.335-.983.684-1.352l2.914-3.086Z" clip-rule="evenodd" />
+                        <path fill-rule="evenodd" d="M19.846 4.318a2.148 2.148 0 0 0-.437-.692 2.014 2.014 0 0 0-.654-.463 1.92 1.92 0 0 0-1.544 0 2.014 2.014 0 0 0-.654.463l-.546.578 2.852 3.02.546-.579a2.14 2.14 0 0 0 .437-.692 2.244 2.244 0 0 0 0-1.635ZM17.45 8.721 14.597 5.7 9.82 10.76a.54.54 0 0 0-.137.27l-.536 2.84c-.07.37.239.696.588.622l2.682-.567a.492.492 0 0 0 .255-.145l4.778-5.06Z" clip-rule="evenodd" />
+                    </svg>
+                    Update
+                </a>
+                <button data-modal-target="popup-modal-2" data-member-id="@Model.PregnancyTracking.Id" data-modal-toggle="popup-modal-2" class="delete-btn px-5 py-2.5 text-sm font-medium text-center inline-flex items-center text-white bg-danger-50 rounded-lg focus:ring-4 focus:outline-none focus:ring-red-100" type="button">
+                    <svg class="w-6 h-6 text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
+                        <path fill-rule="evenodd" d="M8.586 2.586A2 2 0 0 1 10 2h4a2 2 0 0 1 2 2v2h3a1 1 0 1 1 0 2v12a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V8a1 1 0 0 1 0-2h3V4a2 2 0 0 1 .586-1.414ZM10 6h4V4h-4v2Zm1 4a1 1 0 1 0-2 0v8a1 1 0 1 0 2 0v-8Zm4 0a1 1 0 1 0-2 0v8a1 1 0 1 0 2 0v-8Z" clip-rule="evenodd" />
+                    </svg>
+                    <span class="hidden md:inline font-medium">&nbsp; Delete</span>
+                </button>
+            </div>
+        </div>
+
+        <div id="popup-modal-2" tabindex="-1" class="hidden overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center items-center w-full md:inset-0 h-[calc(100%-1rem)] max-h-full">
+            <div class="relative p-4 w-full max-w-md max-h-full">
+                <div class="relative bg-white rounded-lg shadow dark:bg-gray-700">
+                    <button type="button" class="absolute top-3 end-2.5 text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 ms-auto inline-flex justify-center items-center" data-modal-hide="popup-modal-2">
+                        <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 14">
+                            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6" />
+                        </svg>
+                        <span class="sr-only">Close modal</span>
+                    </button>
+                    <form id="deleteForm" asp-action="Delete" asp-controller="PregnancyTracking" asp-route-id="@Model.PregnancyTracking.Id" asp-route-householdNo="@Model.HouseholdNo" asp-route-requestUrl="@Model.RequestUrl">
+                        <div class="p-4 md:p-5 text-center">
+                            <svg class="mx-auto mb-4 text-gray-400 w-12 h-12 dark:text-gray-200" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 20">
+                                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 11V6m0 8h.01M19 10a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" />
+                            </svg>
+                            <h3 class="mb-5 text-lg font-normal text-gray-500">Are you sure you want to delete this household member?</h3>
+                            <button data-modal-hide="popup-modal-2" type="button" class="py-2.5 px-5 ms-3 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-100 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700">No, cancel</button>
+                            <button data-modal-hide="popup-modal-2" type="submit" class="text-white bg-red-600 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-red-300 dark:focus:ring-red-800 font-medium rounded-lg text-sm inline-flex items-center px-5 py-2.5 text-center">
+                                Yes, I'm sure
+                            </button>
+                        </div>
+                    </form>
+                </div>
+            </div>
         </div>
 
         <div>
-            <h4 class="text-2xl font-bold mb-2">Pregnancy Tracking</h4>
             <hr class="mb-2" />
-            <dl class="grid grid-cols-1 md:grid-cols-2 gap-y-8 gap-x-8">
-                <div class="flex items-center pb-2">
-                    <dt class="text-gray-600 font-semibold mr-10 flex-shrink-0 w-40">Full Name</dt>
+            <dl class="grid grid-cols-1 md:grid-cols-2 gap-y-4 gap-x-8 py-5">
+                <div class="flex items-center">
+                    <dt class="text-gray-700 font-semibold mr-10 flex-shrink-0 w-40">Name</dt>
                     <dd class="text-gray-900">@Model.PregnancyTracking.HouseholdMember.FullName</dd>
                 </div>
 
-                <div class="flex items-center pb-2">
-                    <dt class="text-gray-600 font-semibold mr-10 flex-shrink-0 w-40">Age</dt>
-                    <dd class="text-gray-900">@Model.PregnancyTracking.HouseholdMember.Age</dd>
+                <div class="flex items-center ">
+                    <dt class="text-gray-800 font-semibold mr-10 flex-shrink-0 w-40">Pregnancy Outcome</dt>
+                    <dd class="text-gray-900">@Model.PregnancyTracking.PregnancyOutcome</dd>
                 </div>
 
-                <div class="flex items-center pb-2">
-                    <dt class="text-gray-600 font-semibold mr-10 flex-shrink-0 w-40">Gravidity</dt>
+                <div class="flex items-center ">
+                    <dt class="text-gray-800 font-semibold mr-10 flex-shrink-0 w-40">Age</dt>
+                    <dd class="text-gray-900">@Model.PregnancyTracking.Age</dd>
+                </div>
+
+                <div class="flex items-center ">
+                    <dt class="text-gray-800 font-semibold mr-10 flex-shrink-0 w-40">24hrs after birth</dt>
+                    <dd class="text-gray-900">@((Model.PregnancyTracking.PostnatalCheckUp24hrs.HasValue) ? Model.PregnancyTracking.PostnatalCheckUp24hrs.Value.ToString("MMM/dd/yyyy") : "")</dd>
+                </div>
+
+                <div class="flex items-center ">
+                    <dt class="text-gray-800 font-semibold mr-10 flex-shrink-0 w-40">Gravidity</dt>
                     <dd class="text-gray-900">@Model.PregnancyTracking.Gravidity</dd>
                 </div>
 
-                <div class="flex items-center pb-2">
-                    <dt class="text-gray-600 font-semibold mr-10 flex-shrink-0 w-40">Parity</dt>
+                <div class="flex items-center ">
+                    <dt class="text-gray-800 font-semibold mr-10 flex-shrink-0 w-40">7 days after birth</dt>
+                    <dd class="text-gray-900">@((Model.PregnancyTracking.PostnatalCheckUp7days.HasValue) ? Model.PregnancyTracking.PostnatalCheckUp7days.Value.ToString("MMM/dd/yyyy") : "")</dd>
+                </div>
+
+                <div class="flex items-center ">
+                    <dt class="text-gray-800 font-semibold mr-10 flex-shrink-0 w-40">Parity</dt>
                     <dd class="text-gray-900">@Model.PregnancyTracking.Parity</dd>
                 </div>
 
-                <div class="flex items-center pb-2">
-                    <dt class="text-gray-600 font-semibold mr-10 flex-shrink-0 w-40">Expected Date of Delivery</dt>
-                    <dd class="text-gray-900">@Model.PregnancyTracking.ExpectedDateOfDelivery.ToString("mmm/dd/yyyy")</dd>
+                <div class="flex items-center ">
+                    <dt class="text-gray-800 font-semibold mr-10 flex-shrink-0 w-40">Civil Registration</dt>
+                    <dd class="text-gray-900">@((Model.PregnancyTracking.PostnatalCheckUp24hrs.HasValue) ? Model.PregnancyTracking.PostnatalCheckUp24hrs.Value.ToString("MMM/dd/yyyy") : "")</dd>
+                </div>
+
+                <div class="flex items-center ">
+                    <dt class="text-gray-800 font-semibold mr-10 flex-shrink-0 w-40">Expected Date of Delivery</dt>
+                    <dd class="text-gray-900">@Model.PregnancyTracking.ExpectedDateOfDelivery.ToString("MMM/dd/yyyy")</dd>
+                </div>
+
+                <div></div>
+
+                <div class="flex items-center ">
+                    <dt class="text-gray-800 font-semibold mr-10 flex-shrink-0 w-40">1st Trimester Check-Up</dt>
+                    <dd class="text-gray-900">@((Model.PregnancyTracking.FirstAntenatalCheckUp.HasValue) ? Model.PregnancyTracking.FirstAntenatalCheckUp.Value.ToString("MMM/dd/yyyy") : "")</dd>
+                </div>
+
+                <div></div>
+
+                <div class="flex items-center ">
+                    <dt class="text-gray-800 font-semibold mr-10 flex-shrink-0 w-40">2nd Trimester Check-Up</dt>
+                    <dd class="text-gray-900">@((Model.PregnancyTracking.SecondAntenatalCheckUp.HasValue) ? Model.PregnancyTracking.SecondAntenatalCheckUp.Value.ToString("MMM/dd/yyyy") : "")</dd>
+                </div>
+
+                <div></div>
+
+                <div class="flex items-center ">
+                    <dt class="text-gray-800 font-semibold mr-10 flex-shrink-0 w-40">3rd Trimester Check-Up</dt>
+                    <dd class="text-gray-900">@((Model.PregnancyTracking.ThirdAntenatalCheckUp.HasValue) ? Model.PregnancyTracking.ThirdAntenatalCheckUp.Value.ToString("MMM/dd/yyyy") : "")</dd>
+                </div>
+
+                <div></div>
+
+                <div class="flex items-center ">
+                    <dt class="text-gray-800 font-semibold mr-10 flex-shrink-0 w-40">Other Check-Up</dt>
+                    <dd class="text-gray-900">@((Model.PregnancyTracking.MoreCheckUp.HasValue) ? Model.PregnancyTracking.MoreCheckUp.Value.ToString("MMM/dd/yyyy") : "")</dd>
                 </div>
             </dl>
-
-            <hr class="mb-3" />
-
-            <h5 class="text-2xl font-bold mb-2">Antenatal Care Check-Ups</h5>
-            <dl class="grid grid-cols-1 md:grid-cols-2 gap-y-8 gap-x-8">
-                <div class="flex items-center pb-2">
-                    <dt class="text-gray-600 font-semibold mr-10 flex-shrink-0 w-40">1st Trimester</dt>
-                    <dd class="text-gray-900">@((Model.PregnancyTracking.FirstAntenatalCheckUp.HasValue) ? (@Model.PregnancyTracking.FirstAntenatalCheckUp.Value.ToString("MMM/dd/yyyy")) : "")</dd>
-                </div>
-
-                <div class="flex items-center pb-2">
-                    <dt class="text-gray-600 font-semibold mr-10 flex-shrink-0 w-40">2nd Trimester</dt>
-                    <dd class="text-gray-900">@((Model.PregnancyTracking.SecondAntenatalCheckUp.HasValue) ? (@Model.PregnancyTracking.SecondAntenatalCheckUp.Value.ToString("MMM/dd/yyyy")) : "")</dd>
-                </div>
-
-                <div class="flex items-center pb-2">
-                    <dt class="text-gray-600 font-semibold mr-10 flex-shrink-0 w-40">3rd Trimester</dt>
-                    <dd class="text-gray-900">@((Model.PregnancyTracking.ThirdAntenatalCheckUp.HasValue) ? (@Model.PregnancyTracking.ThirdAntenatalCheckUp.Value.ToString("MMM/dd/yyyy")) : "")</dd>
-                </div>
-
-                <div class="flex items-center pb-2">
-                    <dt class="text-gray-600 font-semibold mr-10 flex-shrink-0 w-40">Other</dt>
-                    <dd class="text-gray-900">@((Model.PregnancyTracking.MoreCheckUp.HasValue) ? (@Model.PregnancyTracking.MoreCheckUp.Value.ToString("MMM/dd/yyyy")) : "")</dd>
-                </div>
-            </dl>
-
-            <hr class="mb-3" />
-
-            <h5 class="text-2xl font-bold mb-2">Pregnancy Outcome</h5>
-            <dl class="grid grid-cols-1 md:grid-cols-2 gap-y-8 gap-x-8">
-                <div class="flex items-center pb-2">
-                    <dt class="text-gray-600 font-semibold mr-10 flex-shrink-0 w-40">Pregnancy Outcome</dt>
-                    <dd class="text-gray-900">@Model.PregnancyTracking.PregnancyOutcome</dd>
-                </div>
-            </dl>
-
-            <hr class="mb-3" />
-
-            <h5 class="text-2xl font-bold mb-2">Mother and Child Postnatal Check-Ups</h5>
-            <dl class="grid grid-cols-1 md:grid-cols-2 gap-y-8 gap-x-8">
-                <div class="flex items-center pb-2">
-                    <dt class="text-gray-600 font-semibold mr-10 flex-shrink-0 w-40">24 Hours after Birth</dt>
-                    <dd class="text-gray-900">@((Model.PregnancyTracking.PostnatalCheckUp24hrs.HasValue) ? (@Model.PregnancyTracking.PostnatalCheckUp24hrs.Value.ToString("MMM/dd/yyyy")) : "")</dd>
-                </div>
-
-                <div class="flex items-center pb-2">
-                    <dt class="text-gray-600 font-semibold mr-10 flex-shrink-0 w-40">7 Days after Birth</dt>
-                    <dd class="text-gray-900">@((Model.PregnancyTracking.PostnatalCheckUp7days.HasValue) ? (@Model.PregnancyTracking.PostnatalCheckUp7days.Value.ToString("MMM/dd/yyyy")) : "")</dd>
-                </div>
-            </dl>
-
-            <hr class="mb-3" />
-
-            <h5 class="text-2xl font-bold mb-2">Civil Registration</h5>
-            <dl class="grid grid-cols-1 md:grid-cols-2 gap-y-8 gap-x-8">
-                <div class="flex items-center pb-2">
-                    <dt class="text-gray-600 font-semibold mr-10 flex-shrink-0 w-40">Livebirth</dt>
-                    <dd class="text-gray-900">@((Model.PregnancyTracking.LiveBirth.HasValue) ? (@Model.PregnancyTracking.LiveBirth.Value.ToString("MMM/dd/yyyy")) : "")</dd>
-                </div>
-
-                <div class="flex items-center pb-2">
-                    <dt class="text-gray-600 font-semibold mr-10 flex-shrink-0 w-40">Stillbirth</dt>
-                    <dd class="text-gray-900">@((Model.PregnancyTracking.StillBirth.HasValue) ? (@Model.PregnancyTracking.StillBirth.Value.ToString("MMM/dd/yyyy")) : "")</dd>
-                </div>
-
-                <div class="flex items-center pb-2">
-                    <dt class="text-gray-600 font-semibold mr-10 flex-shrink-0 w-40">Maternal Death</dt>
-                    <dd class="text-gray-900">@((Model.PregnancyTracking.MaternalDeath.HasValue) ? (@Model.PregnancyTracking.MaternalDeath.Value.ToString("MMM/dd/yyyy")) : "")</dd>
-                </div>
-
-                <div class="flex items-center pb-2">
-                    <dt class="text-gray-600 font-semibold mr-10 flex-shrink-0 w-40"> Early Newborn Death</dt>
-                    <dd class="text-gray-900">@((Model.PregnancyTracking.EarlyNewbornDeath.HasValue) ? (@Model.PregnancyTracking.EarlyNewbornDeath.Value.ToString("MMM/dd/yyyy")) : "")</dd>
-                </div>
-            </dl>
-
-            <hr class="mb-3" />
-
         </div>
     </div>
 
     <div class="flex justify-end mt-8">
-        <a asp-action="Index" class="focus:outline-none text-white bg-red-400 hover:bg-red-450 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2">Back to List</a>
-        <a asp-action="Edit" asp-route-id="@Model.PregnancyTracking.Id" asp-route-householdNo="@Model.HouseholdNo" class="focus:outline-none text-white bg-primary-50 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 w-20 flex items-center justify-center">Edit</a>
+        <a asp-action="Index" asp-route-householdNo="@Model.HouseholdNo" class="focus:outline-none text-white bg-red-400 hover:bg-red-450 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2">Back to List</a>
     </div>
 
 </div>
-
-        <h5>Civil Registration</h5>
-        <dt class = "col-sm-2">1
-            Livebirth
-        </dt>
-        <dd class = "col-sm-10">
-            @((Model.PregnancyTracking.LiveBirth.HasValue) ? (@Model.PregnancyTracking.LiveBirth.Value.ToString("MMM/dd/yyyy")) : "")
-        </dd>
-        <dt class = "col-sm-2">2
-            Maternal death
-        </dt>
-        <dd class = "col-sm-10">
-            @((Model.PregnancyTracking.MaternalDeath.HasValue) ? (@Model.PregnancyTracking.MaternalDeath.Value.ToString("MMM/dd/yyyy")) : "")
-        </dd>
-        <dt class = "col-sm-2">3
-            Stillbirth
-        </dt>
-        <dd class = "col-sm-10">
-            @((Model.PregnancyTracking.StillBirth.HasValue) ? (@Model.PregnancyTracking.StillBirth.Value.ToString("MMM/dd/yyyy")) : "")
-        </dd>
-        <dt class = "col-sm-2">4
-            Early newborn death
-        </dt>
-        <dd class = "col-sm-10">
-            @((Model.PregnancyTracking.EarlyNewbornDeath.HasValue) ? (@Model.PregnancyTracking.EarlyNewbornDeath.Value.ToString("MMM/dd/yyyy")) : "")
-        </dd>
-    </dl>
