--- a/AUF.EMR.MVC/Views/PregnancyTracking/Index.cshtml
+++ b/AUF.EMR.MVC/Views/PregnancyTracking/Index.cshtml
@@ -12,7 +12,7 @@
             <h1 class="text-2xl font-bold mb-8">National Safe Motherhood Program - Pregnancy Tracking</h1>
 
             <div class="flex justify-end space-x-2 mb-6">
-                <button type="button" onclick="print('Print', 'PregnancyTracking', @Model.HouseholdNo)" class="flex-shrink-0 inline-block bg-blue-500 hover:bg-blue-300 text-white font-medium py-2 px-4 rounded-lg transition duration-300 ease-in-out text-sm w-24">
+                <button type="button" onclick="print('Print', 'PregnancyTracking', @Model.HouseholdNo)" class="flex-shrink-0 inline-block bg-primary-50 text-white font-medium py-2 px-4 rounded-lg transition duration-300 ease-in-out text-sm w-24">
                     <svg class="w-5 h-5 text-white inline-block mr-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
                         <path fill-rule="evenodd" d="M8 3a2 2 0 0 0-2 2v3h12V5a2 2 0 0 0-2-2H8Zm-3 7a2 2 0 0 0-2 2v5a2 2 0 0 0 2 2h1v-4a1 1 0 0 1 1-1h10a1 1 0 0 1 1 1v4h1a2 2 0 0 0 2-2v-5a2 2 0 0 0-2-2H5Zm4 11a1 1 0 0 1-1-1v-4h8v4a1 1 0 0 1-1 1H9Z" clip-rule="evenodd" />
                     </svg>
@@ -29,88 +29,115 @@
         </div>
 
         <div>
-            <h4 class="text-2xl font-bold mb-2">Information</h4>
+            <div class="flex justify-between">
+                <h5 class="text-2xl font-bold mb-2">Information</h5>
+                <a asp-action="Edit" asp-controller="PregnancyTrackingHH" asp-route-id="@Model.PregnancyTrackingHH.Id" asp-route-householdNo="@Model.HouseholdNo" class="text-white bg-blue-500 mb-1 font-medium rounded-lg transition duration-300 ease-in-out text-sm px-4 py-2 hover:bg-blue-600 flex-shrink-0 inline-flex items-center space-x-2 text-white font-medium" aria-label="Add WRA">
+                    <svg class="w-6 h-6 text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
+                        <path fill-rule="evenodd" d="M11.32 6.176H5c-1.105 0-2 .949-2 2.118v10.588C3 20.052 3.895 21 5 21h11c1.105 0 2-.948 2-2.118v-7.75l-3.914 4.144A2.46 2.46 0 0 1 12.81 16l-2.681.568c-1.75.37-3.292-1.263-2.942-3.115l.536-2.839c.097-.512.335-.983.684-1.352l2.914-3.086Z" clip-rule="evenodd"></path>
+                        <path fill-rule="evenodd" d="M19.846 4.318a2.148 2.148 0 0 0-.437-.692 2.014 2.014 0 0 0-.654-.463 1.92 1.92 0 0 0-1.544 0 2.014 2.014 0 0 0-.654.463l-.546.578 2.852 3.02.546-.579a2.14 2.14 0 0 0 .437-.692 2.244 2.244 0 0 0 0-1.635ZM17.45 8.721 14.597 5.7 9.82 10.76a.54.54 0 0 0-.137.27l-.536 2.84c-.07.37.239.696.588.622l2.682-.567a.492.492 0 0 0 .255-.145l4.778-5.06Z" clip-rule="evenodd"></path>
+                    </svg><span>Edit Info</span>
+                </a>
+            </div>
             <hr class="mb-2" />
-            <dl class="grid grid-cols-1 md:grid-cols-2 gap-y-8 gap-x-8">
+            <dl class="grid grid-cols-1 md:grid-cols-2 gap-x-8">
                 <div class="flex items-center pb-2">
                     <dt class="text-gray-600 font-semibold mr-10 flex-shrink-0 w-40">Barangay</dt>
                     <dd class="text-gray-900">@Model.PregnancyTrackingHH.Barangay</dd>
                 </div>
 
                 <div class="flex items-center pb-2">
-                    <dt class="text-gray-600 font-semibold mr-10 flex-shrink-0 w-40">Region</dt>
+                    <dt class="text-gray-800 font-semibold mr-10 flex-shrink-0 w-40">Region</dt>
                     <dd class="text-gray-900">@Model.PregnancyTrackingHH.Region</dd>
                 </div>
 
                 <div class="flex items-center pb-2">
-                    <dt class="text-gray-600 font-semibold mr-10 flex-shrink-0 w-40">Municipality</dt>
+                    <dt class="text-gray-800 font-semibold mr-10 flex-shrink-0 w-40">Municipality</dt>
                     <dd class="text-gray-900"><p>@Model.PregnancyTrackingHH.Municipality</p></dd>
                 </div>
 
                 <div class="flex items-center pb-2">
-                    <dt class="text-gray-600 font-semibold mr-10 flex-shrink-0 w-40">Province</dt>
+                    <dt class="text-gray-800 font-semibold mr-10 flex-shrink-0 w-40">Province</dt>
                     <dd class="text-gray-900"><p>@Model.PregnancyTrackingHH.Province</p></dd>
                 </div>
 
                 <div class="flex items-center pb-2">
-                    <dt class="text-gray-600 font-semibold mr-10 flex-shrink-0 w-40">Birthing Center</dt>
+                    <dt class="text-gray-800 font-semibold mr-10 flex-shrink-0 w-40">Birthing Center</dt>
                     <dd class="text-gray-900"><p>@Model.PregnancyTrackingHH.BirthingCenter</p></dd>
                 </div>
 
                 <div class="flex items-center pb-2">
-                    <dt class="text-gray-600 font-semibold mr-10 flex-shrink-0 w-40">BC Address</dt>
+                    <dt class="text-gray-800 font-semibold mr-10 flex-shrink-0 w-40">BC Address</dt>
                     <dd class="text-gray-900"><p>@Model.PregnancyTrackingHH.BirthingCenterAddress</p></dd>
                 </div>
 
                 <div class="flex items-center pb-2">
-                    <dt class="text-gray-600 font-semibold mr-10 flex-shrink-0 w-40">Referral Center</dt>
+                    <dt class="text-gray-800 font-semibold mr-10 flex-shrink-0 w-40">Referral Center</dt>
                     <dd class="text-gray-900"><p>@Model.PregnancyTrackingHH.ReferralCenter</p></dd>
                 </div>
 
                 <div class="flex items-center pb-2">
-                    <dt class="text-gray-600 font-semibold mr-10 flex-shrink-0 w-40">RC Address</dt>
+                    <dt class="text-gray-800 font-semibold mr-10 flex-shrink-0 w-40">RC Address</dt>
                     <dd class="text-gray-900"><p>@Model.PregnancyTrackingHH.ReferralCenterAddress</p></dd>
                 </div>
 
                 <div class="flex items-center pb-2">
-                    <dt class="text-gray-600 font-semibold mr-10 flex-shrink-0 w-40">Health Station</dt>
+                    <dt class="text-gray-800 font-semibold mr-10 flex-shrink-0 w-40">Health Station</dt>
                     <dd class="text-gray-900"><p>@Model.PregnancyTrackingHH.BarangayHealthStation</p></dd>
                 </div>
 
                 <div class="flex items-center pb-2">
-                    <dt class="text-gray-600 font-semibold mr-10 flex-shrink-0 w-40">Rural Health Unit</dt>
+                    <dt class="text-gray-800 font-semibold mr-10 flex-shrink-0 w-40">Rural Health Unit</dt>
                     <dd class="text-gray-900"><p>@Model.PregnancyTrackingHH.RuralHealthUnit</p></dd>
                 </div>
 
                 <div class="flex items-center pb-2">
-                    <dt class="text-gray-600 font-semibold mr-10 flex-shrink-0 w-40">Health Worker</dt>
+                    <dt class="text-gray-800 font-semibold mr-10 flex-shrink-0 w-40">Health Worker</dt>
                     <dd class="text-gray-900">@Model.PregnancyTrackingHH.BHWName</dd>
                 </div>
 
                 <div class="flex items-center pb-2">
-                    <dt class="text-gray-600 font-semibold mr-10 flex-shrink-0 w-40">Midwife Name</dt>
+                    <dt class="text-gray-800 font-semibold mr-10 flex-shrink-0 w-40">Midwife Name</dt>
                     <dd class="text-gray-900"><p>@Model.PregnancyTrackingHH.MidwifeName</p></dd>
                 </div>
 
                 <div class="flex items-center pb-2">
-                    <dt class="text-gray-600 font-semibold mr-10 flex-shrink-0 w-40">Year</dt>
+                    <dt class="text-gray-800 font-semibold mr-10 flex-shrink-0 w-40">Year</dt>
                     <dd class="text-gray-900"><p>@Model.PregnancyTrackingHH.Year</p></dd>
                 </div>
-
-
-
             </dl>
             <hr class="mb-3" />
         </div>
     </div>
 
+    <div class="flex justify-between items-center mb-8">
+        <div class="flex-1 mr-4 relative">
+            <input type="text" class="w-full bg-white shadow-md rounded-lg p-3 pr-10 placeholder-gray-500 focus:outline-none focus:ring-2 focus:ring-green-200 border-none"
+                   placeholder="Search...">
+            <div class="absolute inset-y-0 right-0 flex items-center pr-3 pointer-events-none">
+                <svg class="h-5 w-5 text-gray-400" fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24"
+                     stroke="currentColor">
+                    <path d="M21 21l-5.2-5.2m.8-.8a8 8 0 1 1-10.6-10.6 8 8 0 0 1 10.6 10.6z"></path>
+                </svg>
+            </div>
+        </div>
+
+        <!--Search Button-->
+        <button type="submit" class="inline-flex items-center py-3 px-3 ms-2 text-sm font-medium text-white bg-blue-500 rounded-lg border border-blue-500 hover:bg-blue-700 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800 transition duration-300 ease-in-out">
+            <svg class="w-4 h-4 me-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 20">
+                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m19 19-4-4m0-7A7 7 0 1 1 1 8a7 7 0 0 1 14 0Z" />
+            </svg>
+            Search
+        </button>
+    </div>
+
+
     <div class="bg-white shadow-md rounded-lg p-8">
         <div style="overflow:auto;">
             <table class="table-auto w-full">
                 <thead>
-                    <tr class="bg-gray-200">
+                    <tr class="bg-gray-200 text-sm">
                         <th class="px-4 py-2 text-left">
-                            Household Member
+                            Name
                         </th>
                         <th class="px-4 py-2 text-left">
                             Age
@@ -124,38 +151,20 @@
                         <th class="px-4 py-2 text-left">
                             Expected Date Of Delivery
                         </th>
-                        @*  <th>
-                        FirstAntenatalCheckUp
-                        </th>
-                        <th>
-                        SecondAntenatalCheckUp
-                        </th>
-                        <th>
-                        ThirdAntenatalCheckUp
-                        </th>
-                        <th>
-                        PregnancyOutcome
-                        </th>
-                        <th>
-                        PostnatalCheckUp24hrs
-                        </th>
-                        <th>
-                        PostnatalCheckUp7days
-                        </th> *@
                         <th class="px-4 py-2 text-left">
-                            Livebirth
+                            1st Tri Check-Up
+                        </th class="px-4 py-2 text-left">
+                        <th>
+                            2nd Tri Check-Up
                         </th>
                         <th class="px-4 py-2 text-left">
-                            Maternal Death
+                            3rd Tri Check-Up
                         </th>
                         <th class="px-4 py-2 text-left">
-                            Stillbirth
+                            Pregnancy Outcome
                         </th>
                         <th class="px-4 py-2 text-left">
-                            Early Newborn Death
-                        </th>
-                        <th class="px-4 py-2 text-left">
-
+                            Actions
                         </th>
                     </tr>
                 </thead>
@@ -163,7 +172,7 @@
                 <tbody>
                     @foreach (var item in Model.PregnancyTrackingList)
                     {
-                        <tr>
+                        <tr class="text-sm">
                             <td class="border-b border-gray-100 px-4 py-2">
                                 @Html.DisplayFor(modelItem => item.HouseholdMember.FormattedFullName)
                             </td>
@@ -179,37 +188,19 @@
                             <td class="border-b border-gray-100 px-4 py-2">
                                 @Html.DisplayFor(modelItem => item.ExpectedDateOfDelivery)
                             </td>
-                            @*  <td>
-                        @Html.DisplayFor(modelItem => item.FirstAntenatalCheckUp)
-                        </td>
-                        <td>
-                        @Html.DisplayFor(modelItem => item.SecondAntenatalCheckUp)
-                        </td>
-                        <td>
-                        @Html.DisplayFor(modelItem => item.ThirdAntenatalCheckUp)
-                        </td>
-                        <td>
-                        @Html.DisplayFor(modelItem => item.PregnancyOutcome)
-                        </td>
-                        <td>
-                        @Html.DisplayFor(modelItem => item.PostnatalCheckUp24hrs)
-                        </td>
-                        <td>
-                        @Html.DisplayFor(modelItem => item.PostnatalCheckUp7days)
-                        </td> *@
                             <td class="border-b border-gray-100 px-4 py-2">
-                                @Html.DisplayFor(modelItem => item.LiveBirth)
+                                @Html.DisplayFor(modelItem => item.FirstAntenatalCheckUp)
                             </td>
                             <td class="border-b border-gray-100 px-4 py-2">
-                                @Html.DisplayFor(modelItem => item.MaternalDeath)
+                                @Html.DisplayFor(modelItem => item.SecondAntenatalCheckUp)
                             </td>
                             <td class="border-b border-gray-100 px-4 py-2">
-                                @Html.DisplayFor(modelItem => item.StillBirth)
+                                @Html.DisplayFor(modelItem => item.ThirdAntenatalCheckUp)
                             </td>
                             <td class="border-b border-gray-100 px-4 py-2">
-                                @Html.DisplayFor(modelItem => item.EarlyNewbornDeath)
+                                @Html.DisplayFor(modelItem => item.PregnancyOutcome)
                             </td>
-                            <td class="border-b border-gray-100 px-4 py-2 inline-flex items-center text-center">
+                            <td class="border-b border-gray-100 px-4 py-2 inline-flex items-center text-center text-lg">
                                 <a asp-action="Edit" asp-route-id="@item.Id" class="text-yellow-300 hover:text-yellow-400 mr-2"><i class="fas fa-edit"></i></a>
                                 <a asp-action="Details" asp-route-householdNo="@Model.HouseholdNo" asp-route-id="@item.Id" class="text-green-400 hover:text-green-500 mr-2"><i class="fas fa-eye"></i></a>
                                 <a asp-action="Delete" asp-route-id="@item.Id" asp-route-householdNo="@Model.HouseholdNo" class="text-red-300 hover:text-red-400">
