--- a/AUF.EMR.MVC/Views/Shared/Navigations/_FormSideBar.cshtml
+++ b/AUF.EMR.MVC/Views/Shared/Navigations/_FormSideBar.cshtml
@@ -12,11 +12,20 @@
     var controller = this.ViewContext.RouteData.Values["controller"].ToString();
     var action = this.ViewContext.RouteData.Values["action"].ToString();
 
+    var household = new List<string> { "Index", "HouseholdProfile", "Edit", "Create" };
+    var inHousehold = household.Contains(action ?? "", StringComparer.OrdinalIgnoreCase); 
+
     var masterlists = new List<string> { "Infant", "Newborn", "UnderFive", "SchoolAged", "Adolescent", "Adult", "SeniorCitizen", "Create", "Details", "EditChildrenInfo", "EditAdultInfo", "ChildDetails", "AdultDetails" };
     var inMasterlist = masterlists.Contains(action ?? "", StringComparer.OrdinalIgnoreCase);
 
     var oralHealth = new List<string> { "Infant", "OneToFour", "FiveToNine", "TenToFourteen", "PregnantFifteenToNineteen", "PregnantTwentyToFourtyNine", "Details", "EditOralHealthInfo" };
     var inOralHealth = oralHealth.Contains(action ?? "", StringComparer.OrdinalIgnoreCase);
+
+    var wra = new List<string> { "Create", "Index", "Edit", "Details" };
+    var inWra = wra.Contains(action ?? "", StringComparer.OrdinalIgnoreCase);
+
+    var pregTrack = new List<string> { "Index", "Create", "Edit", "Details" };
+    var inPregTrack = pregTrack.Contains(action ?? "", StringComparer.OrdinalIgnoreCase);
 }
 
 <aside id="logo-sidebar" class="fixed top-0 left-0 z-40 w-72 h-screen pt-4 transition-transform -translate-x-full bg-white border-r border-gray-200 sm:translate-x-0" aria-label="Sidebar">
@@ -59,9 +68,9 @@
             </ul>
         <ul class="pt-4 mt-4 space-y-2 border-t border-gray-200 font-medium text-sm">
             <li>
-                <a asp-action="HouseholdProfile" asp-controller="Household" asp-route-householdNo="@Model" class="nav-link @(controller.Equals("Household") && action.Equals("HouseholdProfile") ? "active" : "") flex items-center p-2 text-gray-900 rounded-lg hover:bg-gray-100 group">
+                <a asp-action="HouseholdProfile" asp-controller="Household" asp-route-householdNo="@Model" class="nav-link @((controller.Equals("Household") || controller.Equals("HouseholdMember")) && inHousehold ? "active" : "") flex items-center p-2 text-gray-900 rounded-lg hover:bg-gray-100 group">
                     @{
-                        if (controller.Equals("Household") && action.Equals("HouseholdProfile"))
+                        if ((controller.Equals("Household") || controller.Equals("HouseholdMember")) && inHousehold)
                         {
                             <img src = "~/img/Nav/people-roof.png" class="w-5 h-5"/>
                         }
@@ -153,9 +162,9 @@
                 </ul>
             </li>
             <li>
-                <a asp-action="Index" asp-controller="WRA" asp-route-householdNo="@Model" class="nav-link @(controller.Equals("WRA") && action.Equals("Index") ? "active" : "") flex items-center p-2 text-gray-900 rounded-lg hover:bg-gray-100 group">
+                <a asp-action="Index" asp-controller="WRA" asp-route-householdNo="@Model" class="nav-link @(controller.Equals("WRA") && inWra ? "active" : "") flex items-center p-2 text-gray-900 rounded-lg hover:bg-gray-100 group">
                     @{
-                        if (controller.Equals("WRA") && action.Equals("Index"))
+                        if (controller.Equals("WRA") && inWra)
                         {
                             <img src="~/img/Nav/female-couple.png" class="w-5 h-5" />
                         }
@@ -168,9 +177,9 @@
                 </a>
             </li>
             <li>
-                <a asp-action="Index" asp-controller="PregnancyTracking" asp-route-householdNo="@Model" class="nav-link @(controller.Equals("PregnancyTracking") && action.Equals("Index") ? "active" : "") flex items-center p-2 text-gray-900 rounded-lg hover:bg-gray-100 group">
+                <a asp-action="Index" asp-controller="PregnancyTracking" asp-route-householdNo="@Model" class="nav-link @((controller.Equals("PregnancyTracking") || controller.Equals("PregnancyTrackingHH")) && inPregTrack ? "active" : "") flex items-center p-2 text-gray-900 rounded-lg hover:bg-gray-100 group">
                     @{
-                        if (controller.Equals("PregnancyTracking") && action.Equals("Index"))
+                        if ((controller.Equals("PregnancyTracking") || controller.Equals("PregnancyTrackingHH")) && inPregTrack)
                         {
                             <img src="~/img/Nav/person-pregnant.png" class="w-5 h-5" />
                         }
